[gd_scene load_steps=4 format=2]

[ext_resource path="res://Upgrades/OrbSpawners/TimeLordVictoriousOrbSpawner/TimeLordVictorious.gd" type="Script" id=1]
[ext_resource path="res://Assets/Placeholder/white_pixel.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1352, 776 )

[node name="TimeLordVictorious" type="Area2D"]
collision_layer = 0
collision_mask = 16
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Placeholder" type="Sprite" parent="."]
modulate = Color( 0.396078, 0.34902, 0.403922, 0.380392 )
position = Vector2( -4.00012, -3.99997 )
scale = Vector2( 42.375, 24.375 )
texture = ExtResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_TimeLordVictorious_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_TimeLordVictorious_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
